--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-hooks",
-  "homepage": "https://profcswni.github.io/encuentro-10/",
+  "homepage": "https://naydeli.github.io/encuentro-10/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
